{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 221,
  "lineage": "5b302638-93df-cc35-c51b-28c721e90500",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "BrontechEP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-040021c8d8f1b0456",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-194-181-40.compute-1.amazonaws.com",
            "public_ip": "34.194.181.40",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.BrontechIGW",
            "aws_vpc.BrontechPubvpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "BrontechIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735972722491:internet-gateway/igw-030fc768311b25e3d",
            "id": "igw-030fc768311b25e3d",
            "owner_id": "735972722491",
            "tags": {
              "Name": "BrontechIGW"
            },
            "tags_all": {
              "Name": "BrontechIGW"
            },
            "vpc_id": "vpc-02eb4178aeedb1698"
          },
          "dependencies": [
            "aws_vpc.BrontechPubvpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:735972722491:loadbalancer/app/app-load-balancer-w-terraform/a34b7287e0d16c60",
            "arn_suffix": "app/app-load-balancer-w-terraform/a34b7287e0d16c60",
            "dns_name": "app-load-balancer-w-terraform-1395247242.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:735972722491:loadbalancer/app/app-load-balancer-w-terraform/a34b7287e0d16c60",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-load-balancer-w-terraform",
            "security_groups": [
              "sg-06d53023ea941bf75"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0aafa9d95b68ec074"
              },
              {
                "subnet_id": "subnet-0e5d3043272406b91"
              }
            ],
            "subnets": [
              "subnet-0aafa9d95b68ec074",
              "subnet-0e5d3043272406b91"
            ],
            "tags": {
              "App_Name": "ovid",
              "App_role": "web server",
              "Business_unit": "GBS",
              "Cost_center": "xyz222",
              "Environment": "dev",
              "Name": "jjtechAPP",
              "Security_Classification": "NA"
            },
            "tags_all": {
              "App_Name": "ovid",
              "App_role": "web server",
              "Business_unit": "GBS",
              "Cost_center": "xyz222",
              "Environment": "dev",
              "Name": "jjtechAPP",
              "Security_Classification": "NA"
            },
            "vpc_id": "vpc-02eb4178aeedb1698",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_eip.BrontechEP",
            "aws_internet_gateway.BrontechIGW",
            "aws_security_group.Web_Traffic",
            "aws_subnet.BrontechPritSN",
            "aws_subnet.BrontechPubSN",
            "aws_vpc.BrontechPubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:735972722491:listener/app/app-load-balancer-w-terraform/a34b7287e0d16c60/571316325c39d31a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:735972722491:targetgroup/lb-tg20210628225420744600000001/7d0152dccdb842b0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:735972722491:listener/app/app-load-balancer-w-terraform/a34b7287e0d16c60/571316325c39d31a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:735972722491:loadbalancer/app/app-load-balancer-w-terraform/a34b7287e0d16c60",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.BrontechEP",
            "aws_internet_gateway.BrontechIGW",
            "aws_lb.alb",
            "aws_lb_target_group.lb_target",
            "aws_security_group.Web_Traffic",
            "aws_subnet.BrontechPritSN",
            "aws_subnet.BrontechPubSN",
            "aws_vpc.BrontechPubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:735972722491:targetgroup/lb-tg20210628225420744600000001/7d0152dccdb842b0",
            "arn_suffix": "targetgroup/lb-tg20210628225420744600000001/7d0152dccdb842b0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:735972722491:targetgroup/lb-tg20210628225420744600000001/7d0152dccdb842b0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lb-tg20210628225420744600000001",
            "name_prefix": "lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "App_Name": "ovid",
              "App_role": "web server",
              "Business_unit": "GBS",
              "Cost_center": "xyz222",
              "Environment": "dev",
              "Name": "jjtechAPP",
              "Security_Classification": "NA"
            },
            "tags_all": {
              "App_Name": "ovid",
              "App_role": "web server",
              "Business_unit": "GBS",
              "Cost_center": "xyz222",
              "Environment": "dev",
              "Name": "jjtechAPP",
              "Security_Classification": "NA"
            },
            "target_type": "instance",
            "vpc_id": "vpc-02eb4178aeedb1698"
          },
          "dependencies": [
            "aws_vpc.BrontechPubvpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "BrontechPritRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735972722491:route-table/rtb-0b613b71f88f3d743",
            "id": "rtb-0b613b71f88f3d743",
            "owner_id": "735972722491",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "BrontechPritRT"
            },
            "tags_all": {
              "Name": "BrontechPritRT"
            },
            "vpc_id": "vpc-02eb4178aeedb1698"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.BrontechPubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "BrontechPubRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735972722491:route-table/rtb-0788573b5c82caa32",
            "id": "rtb-0788573b5c82caa32",
            "owner_id": "735972722491",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-030fc768311b25e3d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "BrontechPubRT"
            },
            "tags_all": {
              "Name": "BrontechPubRT"
            },
            "vpc_id": "vpc-02eb4178aeedb1698"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.BrontechEP",
            "aws_internet_gateway.BrontechIGW",
            "aws_vpc.BrontechPubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "BrontechPritAS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f91ae1eae03861fe",
            "route_table_id": "rtb-0b613b71f88f3d743",
            "subnet_id": "subnet-0e5d3043272406b91"
          },
          "dependencies": [
            "aws_route_table.BrontechPritRT",
            "aws_subnet.BrontechPritSN",
            "aws_vpc.BrontechPubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "BrontechPubAS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4a377c61d451627",
            "route_table_id": "rtb-0788573b5c82caa32",
            "subnet_id": "subnet-0aafa9d95b68ec074"
          },
          "dependencies": [
            "aws_eip.BrontechEP",
            "aws_internet_gateway.BrontechIGW",
            "aws_route_table.BrontechPubRT",
            "aws_subnet.BrontechPubSN",
            "aws_vpc.BrontechPubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Web_Traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb_sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735972722491:security-group/sg-06d53023ea941bf75",
            "description": "allow alb sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d53023ea941bf75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "735972722491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_Web_Traffic"
            },
            "tags_all": {
              "Name": "allow_Web_Traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eb4178aeedb1698"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.BrontechPubvpc",
            "aws_eip.BrontechEP",
            "aws_internet_gateway.BrontechIGW"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "backend_sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735972722491:security-group/sg-0342c7dfb888e83c8",
            "description": "backend access to resources",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0342c7dfb888e83c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "backend_sg",
            "name_prefix": "",
            "owner_id": "735972722491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_Web_Traffic"
            },
            "tags_all": {
              "Name": "allow_Web_Traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eb4178aeedb1698"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.BrontechIGW",
            "aws_vpc.BrontechPubvpc",
            "aws_eip.BrontechEP"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "rds_sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735972722491:security-group/sg-0a9668b1c49bfc76e",
            "description": "rds access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9668b1c49bfc76e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "735972722491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_Web_Traffic"
            },
            "tags_all": {
              "Name": "allow_Web_Traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eb4178aeedb1698"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.BrontechIGW",
            "aws_vpc.BrontechPubvpc",
            "aws_eip.BrontechEP"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "web_sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735972722491:security-group/sg-08abdbee28a774dff",
            "description": "security group for inbound rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08abdbee28a774dff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "34.194.181.40/32"
                ],
                "description": "",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "34.194.181.40/32"
                ],
                "description": "",
                "from_port": 1241,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1241
              },
              {
                "cidr_blocks": [
                  "34.194.181.40/32"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "34.194.181.40/32"
                ],
                "description": "",
                "from_port": 23,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 23
              },
              {
                "cidr_blocks": [
                  "34.194.181.40/32"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "34.194.181.40/32"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "34.194.181.40/32"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "735972722491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_Web_Traffic"
            },
            "tags_all": {
              "Name": "allow_Web_Traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eb4178aeedb1698"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.BrontechEP",
            "aws_internet_gateway.BrontechIGW",
            "aws_vpc.BrontechPubvpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "BrontechPritSN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735972722491:subnet/subnet-0e5d3043272406b91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e5d3043272406b91",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735972722491",
            "tags": {
              "Name": "BrontechPritSN"
            },
            "tags_all": {
              "Name": "BrontechPritSN"
            },
            "vpc_id": "vpc-02eb4178aeedb1698"
          },
          "dependencies": [
            "aws_vpc.BrontechPubvpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "BrontechPubSN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735972722491:subnet/subnet-0aafa9d95b68ec074",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0aafa9d95b68ec074",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735972722491",
            "tags": {
              "Name": "BrontechPubSN"
            },
            "tags_all": {
              "Name": "BrontechPubSN"
            },
            "vpc_id": "vpc-02eb4178aeedb1698"
          },
          "dependencies": [
            "aws_vpc.BrontechPubvpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "BrontechPubvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:735972722491:vpc/vpc-02eb4178aeedb1698",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-090f7b60c38a19e10",
            "default_route_table_id": "rtb-0e3d19a25d0f63b8a",
            "default_security_group_id": "sg-0e0bbc161913fbd74",
            "dhcp_options_id": "dopt-c8d3beb2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02eb4178aeedb1698",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e3d19a25d0f63b8a",
            "owner_id": "735972722491",
            "tags": {
              "Name": "BrontechPubvpc"
            },
            "tags_all": {
              "Name": "BrontechPubvpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}